Fixes a bug caused by overflow
If overflow is set to auto, it will mess with the width of the page.

--- a/assets/sass/_sass/_base.scss
+++ b/assets/sass/_sass/_base.scss
@@ -8,21 +8,24 @@
 }
 
 html {
+  font-size: 100%;
   text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
+  width: 100%;
   margin: 0;
+  padding: 0;
   font-family: var(--body-font);
   font-size: var(--body-font-size);
   line-height: var(--body-line-height);
   font-weight: 425;
-  text-rendering: optimizelegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   color: var(--body-color);
   background-color: var(--body-bg);
   overflow-wrap: break-word;
+  overflow: scroll;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -80,3 +83,4 @@ mark {
   background-color: var(--yellow-100);
   border-radius: .125rem;
 }
+
