--- a/assets/sass/_sass/_font.scss
+++ b/assets/sass/_sass/_font.scss
@@ -4,8 +4,9 @@
   font-family: 'Inter var';
   font-style: normal;
   font-weight: 100 900;
-  font-display: fallback;
-  src: local(""), url('../fonts/Inter/Inter-roman.var.woff2') format("woff2");
+  font-display: swap;
+  src: url('/fonts/Inter/Inter-roman.var.woff2'), 
+  url('../fonts/Inter/Inter-roman.var.woff2') format("woff2");
   font-named-instance: 'Regular';
 }
 
@@ -13,7 +14,8 @@
   font-family: 'Inter var';
   font-style: italic;
   font-weight: 100 900;
-  font-display: fallback;
-  src: local(""), url('../fonts/Inter/Inter-italic.var.woff2') format("woff2");
+  font-display: swap;
+  src: url('/fonts/Inter/Inter-italic.var.woff2'),
+  url('../fonts/Inter/Inter-italic.var.woff2') format("woff2");
   font-named-instance: 'Italic';
 }
