--- a/assets/sass/_sass/_posts.scss
+++ b/assets/sass/_sass/_posts.scss
@@ -16,9 +16,6 @@
 .page-title,
 .post-title {
   color: var(--heading-color);
-}
-.page-title,
-.post-title {
   margin-top: 0;
 }
 .post-title a {
